ARROW-2195: [Plasma] Return auto-releasing buffers

On the C++ side, add a new PlasmaClient::GetAuto() method to return buffers that release
the corresponding object on destruction.

On the Python side, return such buffers in PlasmaClient.get_buffers().