cpp/src/plasma/test/client_tests.cc
@@ -116,32 +116,86 @@ TEST_F(TestPlasmaStore, ContainsTest) {
 
 TEST_F(TestPlasmaStore, GetTest) {
   ObjectID object_id = ObjectID::from_random();
-  ObjectBuffer object_buffer;
+  EXPECT_FALSE(client_.IsInUse(object_id));
+  {
+    ObjectBuffer object_buffer;
 
-  // Test for object non-existence.
-  ARROW_CHECK_OK(client_.Get(&object_id, 1, 0, &object_buffer));
-  ASSERT_EQ(object_buffer.data_size, -1);
+    // Test for object non-existence.
+    ARROW_CHECK_OK(client_.Get(&object_id, 1, 0, &object_buffer));
+    ASSERT_EQ(object_buffer.data_size, -1);
 
-  // Test for the object being in local Plasma store.
-  // First create object.
-  int64_t data_size = 4;
-  uint8_t metadata[] = {5};
-  int64_t metadata_size = sizeof(metadata);
-  std::shared_ptr<Buffer> data_buffer;
-  uint8_t* data;
-  ARROW_CHECK_OK(
-      client_.Create(object_id, data_size, metadata, metadata_size, &data_buffer));
-  data = data_buffer->mutable_data();
-  for (int64_t i = 0; i < data_size; i++) {
-    data[i] = static_cast<uint8_t>(i % 4);
+    // Test for the object being in local Plasma store.
+    // First create object.
+    int64_t data_size = 4;
+    uint8_t metadata[] = {5};
+    int64_t metadata_size = sizeof(metadata);
+    std::shared_ptr<Buffer> data_buffer;
+    uint8_t* data;
+    ARROW_CHECK_OK(
+        client_.Create(object_id, data_size, metadata, metadata_size, &data_buffer));
+    data = data_buffer->mutable_data();
+    for (int64_t i = 0; i < data_size; i++) {
+      data[i] = static_cast<uint8_t>(i % 4);
+    }
+    ARROW_CHECK_OK(client_.Seal(object_id));
+
+    ARROW_CHECK_OK(client_.Get(&object_id, 1, -1, &object_buffer));
+    const uint8_t* object_data = object_buffer.data->data();
+    for (int64_t i = 0; i < data_size; i++) {
+      ASSERT_EQ(data[i], object_data[i]);
+    }
+    EXPECT_TRUE(client_.IsInUse(object_id));
   }
-  ARROW_CHECK_OK(client_.Seal(object_id));
+  // With Get(), need to manually call Release()
+  EXPECT_TRUE(client_.IsInUse(object_id));
+  ARROW_CHECK_OK(client_.Release(object_id));  // For Create()
+  ARROW_CHECK_OK(client_.FlushReleaseHistory());
+  EXPECT_TRUE(client_.IsInUse(object_id));
+  ARROW_CHECK_OK(client_.Release(object_id));  // For Get()
+  ARROW_CHECK_OK(client_.FlushReleaseHistory());
+  EXPECT_FALSE(client_.IsInUse(object_id));
+}
 
-  ARROW_CHECK_OK(client_.Get(&object_id, 1, -1, &object_buffer));
-  const uint8_t* object_data = object_buffer.data->data();
-  for (int64_t i = 0; i < data_size; i++) {
-    ASSERT_EQ(data[i], object_data[i]);
+TEST_F(TestPlasmaStore, GetAutoTest) {
+  ObjectID object_id = ObjectID::from_random();
+  EXPECT_FALSE(client_.IsInUse(object_id));
+  // XXX factor out stuff
+  // XXX need CreateAuto() too?
+  {
+    ObjectBuffer object_buffer;
+
+    // Test for object non-existence.
+    ARROW_CHECK_OK(client_.Get(&object_id, 1, 0, &object_buffer));
+    ASSERT_EQ(object_buffer.data_size, -1);
+
+    // Test for the object being in local Plasma store.
+    // First create object.
+    int64_t data_size = 4;
+    uint8_t metadata[] = {5};
+    int64_t metadata_size = sizeof(metadata);
+    std::shared_ptr<Buffer> data_buffer;
+    uint8_t* data;
+    ARROW_CHECK_OK(
+        client_.Create(object_id, data_size, metadata, metadata_size, &data_buffer));
+    data = data_buffer->mutable_data();
+    for (int64_t i = 0; i < data_size; i++) {
+      data[i] = static_cast<uint8_t>(i % 4);
+    }
+    ARROW_CHECK_OK(client_.Seal(object_id));
+    ARROW_CHECK_OK(client_.Release(object_id));  // For Create()
+    ARROW_CHECK_OK(client_.FlushReleaseHistory());
+    EXPECT_FALSE(client_.IsInUse(object_id));
+
+    ARROW_CHECK_OK(client_.GetAuto(&object_id, 1, -1, &object_buffer));
+    const uint8_t* object_data = object_buffer.data->data();
+    for (int64_t i = 0; i < data_size; i++) {
+      ASSERT_EQ(data[i], object_data[i]);
+    }
+    EXPECT_TRUE(client_.IsInUse(object_id));
   }
+  // With GetAuto(), object is automatically released
+  ARROW_CHECK_OK(client_.FlushReleaseHistory());
+  EXPECT_FALSE(client_.IsInUse(object_id));
 }
 
 TEST_F(TestPlasmaStore, MultipleGetTest) {
